refactor: 본인은 유저 검색에서 제외